[tool.poetry]
name = "unrival_serverless"
version = "0.1.0"
description = "POC for serverless implementation of Unrival protocol"
authors = ["David Joseph <dvdgdnjsph@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
behave = "^1.2.6"
sphinx-autodoc-typehints = "^1.18.2"
Sphinx = "^5.0.1"
sphinx-rtd-theme = "^1.0.0"
sphinxcontrib-napoleon = "^0.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme", "sphinxcontrib-napoleon"]
